--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -1,6 +1,6 @@
 spring.application.name=Car Service
 
-spring.datasource.url=jdbc:postgresql://host.docker.internal:5432/car_sercice
+spring.datasource.url=jdbc:postgresql://host.docker.internal:5432/car_service
 spring.datasource.username=postgres
 spring.datasource.password=123456
 
