Implement Auth0 Security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,14 @@ spring.flyway.url=jdbc:postgresql://localhost:5432/car_service
 spring.flyway.user=postgres
 spring.flyway.password=123456
 
+server.port=7000
+auth0.audience=https://car-service.example.com
+auth0.domain=dev-crfs6orqktz444bw.eu.auth0.com
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://${auth0.domain}/
+
 logging.config=classpath:/logback-spring.xml
 logging.level.root=info
 logging.level.com.foxminded=debug
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.security.web=DEBUG
+logging.level.org.springframework.security.oauth2=DEBUG
