Implement OpenAPI v3 with SpringDoc V2 and JWT security scheme

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,6 @@ spring.security.oauth2.resourceserver.jwt.issuer-uri=https://${auth0.domain}/
 logging.config=classpath:/logback-spring.xml
 logging.level.root=info
 logging.level.com.foxminded=debug
-logging.level.org.springframework.security=DEBUG
-logging.level.org.springframework.security.web=DEBUG
-logging.level.org.springframework.security.oauth2=DEBUG
+#logging.level.org.springframework.security=DEBUG
+#logging.level.org.springframework.security.web=DEBUG
+#logging.level.org.springframework.security.oauth2=DEBUG
