--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -1,13 +1,13 @@
 spring.application.name=Car Service
 
-spring.datasource.url=jdbc:postgresql://host.docker.internal:5432/car_service
-spring.datasource.username=postgres
-spring.datasource.password=123456
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
 spring.flyway.enabled=true
-spring.flyway.url=jdbc:postgresql://host.docker.internal:5432/car_service
-spring.flyway.user=postgres
-spring.flyway.password=123456
+spring.flyway.url=${SPRING_FLYWAY_URL}
+spring.flyway.user=${SPRING_FLYWAY_USER}
+spring.flyway.password=${SPRING_FLYWAY_PASSWORD}
 
 logging.level.root=info
 logging.level.com.foxminded=debug
