--- a/.env
+++ b/.env
@@ -1,24 +1,21 @@
-# App Configuration
+# --- Application Settings ---
+APP_PORT=7000
 
-SPRING_DATASOURCE_URL=jdbc:postgresql://${DB_HOST_LOCAL}:${DB_PORT}/${DB_NAME}
+# --- Database Access (used by Spring directly) ---
+SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/car_service
 SPRING_DATASOURCE_USERNAME=postgres
 SPRING_DATASOURCE_PASSWORD=123456
 
-SPRING_FLYWAY_URL=jdbc:postgresql://${DB_HOST_LOCAL}:${DB_PORT}/${DB_NAME}
+SPRING_FLYWAY_URL=jdbc:postgresql://db:5432/car_service
 SPRING_FLYWAY_USER=postgres
 SPRING_FLYWAY_PASSWORD=123456
 
-APP_PORT=7000
+# --- OAuth2 / JWT ---
+AUTH0_AUDIENCE=https://car-service.example.com
+JWT_ISSUER_URI=https://dev-crfs6orqktz444bw.eu.auth0.com/
 
-# Database Configuration
-
-# Local DB host (used when running locally)
-DB_HOST_LOCAL=host.docker.internal
-
-# Docker DB host (used when running in Docker)
+# --- Optional: shared DB vars (used in docker-compose only) ---
 DB_HOST_DOCKER=db
-
-# Common DB settings
 DB_PORT=5432
 DB_NAME=car_service
 DB_USER=postgres
