--- a/src/main/resources/application-render.properties
+++ b/src/main/resources/application-render.properties
@@ -1,6 +1,6 @@
 # --- App Info ---
 spring.application.name=Car Service
-server.port=${APP_PORT:7000}
+server.port=${PORT}
 
 # --- Datasource ---
 spring.datasource.url=${SPRING_DATASOURCE_URL}
