--- a/src/main/resources/application-render.properties
+++ b/src/main/resources/application-render.properties
@@ -3,21 +3,21 @@ spring.application.name=Car Service
 server.port=${PORT}
 
 # --- Datasource ---
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.url=jdbc:postgresql://dpg-d0v8rpp5pdvs7387o6k0-a:5432/cv_data_base
+spring.datasource.username=cv_data_base_user
+spring.datasource.password=g52HKlWCk5hZ8LBBReLbsWzhhV2v008m
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # --- Flyway ---
 spring.flyway.enabled=true
-spring.flyway.url=${SPRING_FLYWAY_URL}
-spring.flyway.user=${SPRING_FLYWAY_USER}
-spring.flyway.password=${SPRING_FLYWAY_PASSWORD}
+spring.flyway.url=jdbc:postgresql://dpg-d0v8rpp5pdvs7387o6k0-a:5432/cv_data_base
+spring.flyway.user=cv_data_base_user
+spring.flyway.password=g52HKlWCk5hZ8LBBReLbsWzhhV2v008m
 spring.flyway.locations=classpath:db/migration
 
 # --- Security (JWT / OAuth2) ---
-auth0.audience=${AUTH0_AUDIENCE}
-spring.security.oauth2.resourceserver.jwt.issuer-uri=${JWT_ISSUER_URI}
+auth0.audience=https://car-service.example.com
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://dev-crfs6orqktz444bw.eu.auth0.com/
 
 # --- Logging ---
 logging.level.root=INFO
