--- a/src/main/resources/application-render.properties
+++ b/src/main/resources/application-render.properties
@@ -3,16 +3,16 @@ spring.application.name=Car Service
 server.port=${PORT}
 
 # --- Datasource ---
-spring.datasource.url=jdbc:postgresql://dpg-d0v8rpp5pdvs7387o6k0-a:5432/cv_data_base
-spring.datasource.username=cv_data_base_user
-spring.datasource.password=g52HKlWCk5hZ8LBBReLbsWzhhV2v008m
+spring.datasource.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
+spring.datasource.username=${PGUSER}
+spring.datasource.password=${PGPASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # --- Flyway ---
 spring.flyway.enabled=true
-spring.flyway.url=jdbc:postgresql://dpg-d0v8rpp5pdvs7387o6k0-a:5432/cv_data_base
-spring.flyway.user=cv_data_base_user
-spring.flyway.password=g52HKlWCk5hZ8LBBReLbsWzhhV2v008m
+spring.flyway.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
+spring.flyway.user=${PGUSER}
+spring.flyway.password=${PGPASSWORD}
 spring.flyway.locations=classpath:db/migration
 
 # --- Security (JWT / OAuth2) ---
