--- a/src/main/resources/application-render.properties
+++ b/src/main/resources/application-render.properties
@@ -3,16 +3,16 @@ spring.application.name=Car Service
 server.port=${PORT}
 
 # --- Datasource ---
-spring.datasource.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
-spring.datasource.username=${PGUSER}
-spring.datasource.password=${PGPASSWORD}
+spring.datasource.url=jdbc:postgresql://postgres.railway.internal:5432/railway
+spring.datasource.username=postgres
+spring.datasource.password=WRwiVRVaasAuRKESClWGKcoIXycoAYEj
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # --- Flyway ---
 spring.flyway.enabled=true
-spring.flyway.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
-spring.flyway.user=${PGUSER}
-spring.flyway.password=${PGPASSWORD}
+spring.flyway.url=jdbc:postgresql://postgres.railway.internal:5432/railway
+spring.flyway.user=postgres
+spring.flyway.password=WRwiVRVaasAuRKESClWGKcoIXycoAYEj
 spring.flyway.locations=classpath:db/migration
 
 # --- Security (JWT / OAuth2) ---
