--- a/src/main/resources/application-render.properties
+++ b/src/main/resources/application-render.properties
@@ -3,16 +3,16 @@ spring.application.name=Car Service
 server.port=${PORT}
 
 # --- Datasource ---
-spring.datasource.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
-spring.datasource.username=${PGUSER}
-spring.datasource.password=${PGPASSWORD}
+spring.datasource.url=${RAILWAY_DATABASE_URL}
+spring.datasource.username=${RAILWAY_POSTGRES_USER}
+spring.datasource.password=${RAILWAY_POSTGRES_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # --- Flyway ---
 spring.flyway.enabled=true
-spring.flyway.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
-spring.flyway.user=${PGUSER}
-spring.flyway.password=${PGPASSWORD}
+spring.flyway.url=${RAILWAY_DATABASE_URL}
+spring.flyway.user=${RAILWAY_POSTGRES_USER}
+spring.flyway.password=${RAILWAY_POSTGRES_PASSWORD}
 spring.flyway.locations=classpath:db/migration
 
 # --- Security (JWT / OAuth2) ---
