--- a/src/main/resources/application-render.properties
+++ b/src/main/resources/application-render.properties
@@ -1,18 +1,18 @@
 # --- App Info ---
 spring.application.name=Car Service
-server.port=${PORT}
+server.port=${PGPORT}
 
 # --- Datasource ---
-spring.datasource.url=${RAILWAY_DATABASE_URL}
-spring.datasource.username=${RAILWAY_POSTGRES_USER}
-spring.datasource.password=${RAILWAY_POSTGRES_PASSWORD}
+spring.datasource.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
+spring.datasource.username=${PGUSER}
+spring.datasource.password=${PGPASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # --- Flyway ---
 spring.flyway.enabled=true
-spring.flyway.url=${RAILWAY_DATABASE_URL}
-spring.flyway.user=${RAILWAY_POSTGRES_USER}
-spring.flyway.password=${RAILWAY_POSTGRES_PASSWORD}
+spring.flyway.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
+spring.flyway.user=${PGUSER}
+spring.flyway.password=${PGPASSWORD}
 spring.flyway.locations=classpath:db/migration
 
 # --- Security (JWT / OAuth2) ---
