--- a/src/main/resources/application-render.properties
+++ b/src/main/resources/application-render.properties
@@ -1,6 +1,6 @@
 # --- App Info ---
 spring.application.name=Car Service
-server.port=${PGPORT}
+server.port=${PORT}
 
 # --- Datasource ---
 spring.datasource.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
