--- a/src/main/resources/application-render.properties
+++ b/src/main/resources/application-render.properties
@@ -3,14 +3,15 @@ spring.application.name=Car Service
 server.port=${PORT:8080}
 
 # --- Datasource ---
-spring.datasource.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
+spring.datasource.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}?prepareThreshold=0
 spring.datasource.username=${PGUSER}
 spring.datasource.password=${PGPASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.hikari.data-source-properties.prepareThreshold=0
 
 # --- Flyway ---
 spring.flyway.enabled=true
-spring.flyway.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
+spring.flyway.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}?prepareThreshold=0
 spring.flyway.user=${PGUSER}
 spring.flyway.password=${PGPASSWORD}
 spring.flyway.locations=classpath:db/migration
